# stapler_engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Colour.cpp  LICENSE.md  README.md  Rand.cpp  StaplerEngine.h  StaplerEngine.sln  StaplerEngine.vcxproj  StaplerEngine.vcxproj.filters  Vect.cpp  cpp.hint  index.html  object.cpp  se3d.cpp  stapler_engine.sln  stapler_engine.vcxproj  stapler_engine.vcxproj.filters  vec.cpp
.github/workflows/: cmake-single-platform.yml
include/: QMath.h  Rand.h  SEDefinition.h  Vect.h  colour.h  defse.h  dll_config.h  object.h  pthread.h  s_object.h  s_type_def.h  se3d.h  stapler_engine.h  vec.h
include/component/: component_base.h  random_eng.h  timer.h
include/math/: math_func.h  s_math.h  s_math_func.h  vec.h  vec_2.h  vec_2i.h  vec_3.h  vec_3i.h  vec_4.h  vec_4i.h  vec_base.h
include/node/: node.h  node_2d.h  node_3d.h  node_base.h
include/object/: object.h
include/vector/: vec_4i.h
lib/: stapler_engine.h
lib/component/: component.h
lib/node/: node.h  node_2d.h  node_base.h
lib/object/: connector.h
lib/plugin/: plugin_base.h
lib/stapler_engine/: dll_config.h  stapler_engine.h
lib/stapler_engine/object/: connector.h  object.h
lib/stapler_engine/plugin/: plugin_base.h
lib/stapler_engine/vector/: vec.h  vec_2.h  vec_2i.h  vec_3.h  vec_3i.h  vec_4.h  vec_4i.h  vec_base.h
lib/structure/: structure_base.h
lib/vector/: vec.h  vec_2.h  vec_2i.h  vec_3.h  vec_3i.h  vec_4.h  vec_4i.h  vec_base.h
src/: CMakeLists.txt  s_config.h  s_object.cpp  s_object.h  s_type_def.h  stapler_engine.cpp  stapler_engine.h
src/component/: random_eng.cpp  s_component.h  s_component_base.h  s_random_eng.cpp  s_random_eng.h  s_random_engine.cpp  s_random_engine.h  s_timer.cpp  s_timer.h  timer.cpp
src/core/: s_attribute.h  s_config.h  s_core.h  s_delegate.h  s_object.cpp  s_object.h  s_property.h  s_type_def.h
src/math/: s_math.h  s_math_defs.h  s_math_func.h  s_prime_lib.cpp  s_prime_lib.h  s_random.cpp  s_random.h  s_shape.h  s_shape_base.h  s_square.h  s_vector.h  s_vector_2.cpp  s_vector_2.h  s_vector_2i.cpp  s_vector_2i.h  s_vector_3.cpp  s_vector_3.h  s_vector_3i.cpp  s_vector_3i.h  s_vector_4.cpp  s_vector_4.h  s_vector_4i.cpp  s_vector_4i.h  s_vector_base.cpp  s_vector_base.h  vec_2.cpp  vec_2i.cpp  vec_3.cpp  vec_3i.cpp  vec_4.cpp  vec_4i.cpp  vec_base.cpp
src/node/: node_base.cpp  s_node.h  s_node_2d.h  s_node_3d.h  s_node_base.cpp  s_node_base.h
src/object/: object.cpp
src/vector/: vec_2.cpp  vec_2i.cpp  vec_3.cpp  vec_3i.cpp  vec_4.cpp  vec_4i.cpp  vec_base.cpp
test/: CMakeLists.txt  main.cpp
testse/: testmain.cpp
